--- a/tests/tests_dimension_builder/test_unit.yaml
+++ b/tests/tests_dimension_builder/test_unit.yaml
@@ -1011,7 +1011,7 @@ test_parse_filled_levels_into_parent_child_failure:
     expected_exception: "SchemaValidationError"
     expected_message: "Level column Level0 is missing."
 
-test_ensure_row_consistency_edges_df:
+test_drop_invalid_edges:
   - # Scenario 1: Mixed valid and invalid parents
     # Row 0: Valid -> Kept
     # Row 1: Empty string -> Dropped
@@ -1064,7 +1064,7 @@ test_ensure_row_consistency_edges_df:
       "Hierarchy": [ "Default", "Alt" ],
     }
 
-test_ensure_row_consistency_attr_df:
+test_deduplicate_elements:
   - # Scenario 1: Exact duplicates across all columns
     input_df: {
       "ElementName": ["Item1", "Item1", "Item2"],
