small refactor for test, test pipelines set to manual run

--- a/.github/workflows/test_dimension_builder.yaml
+++ b/.github/workflows/test_dimension_builder.yaml
@@ -1,11 +1,11 @@
 name: Dimension Builder Tests
 on:
-  push:
-    branches-ignore:
-      - main
-    paths:
-      - "TM1_bedrock_py/dimension_builder/**"
-      - "tests/tests_dimension_builder/**"
+  #push:
+  #  branches-ignore:
+  #    - main
+  #  paths:
+  #    - "TM1_bedrock_py/dimension_builder/**"
+  #    - "tests/tests_dimension_builder/**"
   workflow_dispatch: {}
 
 concurrency:
