--- a/.github/workflows/test_and_build.yaml
+++ b/.github/workflows/test_and_build.yaml
@@ -1,11 +1,11 @@
 name: Build & Test with Python3.10
 on:
-  push:
-    branches-ignore:
-      - main
-    paths-ignore:
-      - "TM1_bedrock_py/dimension_builder/**"
-      - "tests/tests_dimension_builder/**"
+  #push:
+  #  branches-ignore:
+  #    - main
+  #  paths-ignore:
+  #    - "TM1_bedrock_py/dimension_builder/**"
+  #    - "tests/tests_dimension_builder/**"
   workflow_dispatch: {}
 
 concurrency:
