--- a/tests/test_unit.yaml
+++ b/tests/test_unit.yaml
@@ -993,10 +993,7 @@ test_mdx_to_dataframe_execute_query_success:
   -
     data_mdx:
       "SELECT 
-           {[Periods].[Periods].[202301],[Periods].[Periods].[202302],[Periods].[Periods].[202303],
-           [Periods].[Periods].[202304],[Periods].[Periods].[202305],[Periods].[Periods].[202306],
-           [Periods].[Periods].[202307],[Periods].[Periods].[202308],[Periods].[Periods].[202309],
-           [Periods].[Periods].[202310],[Periods].[Periods].[202311],[Periods].[Periods].[202312]}  
+           {[Periods].[Periods].[202301],[Periods].[Periods].[202302],[Periods].[Periods].[202303]}  
           ON COLUMNS , 
            {[Groups].[Groups].Members}
            * {[Employees].[Employees].Members} 
@@ -1013,10 +1010,6 @@ test_mdx_to_dataframe_execute_query_success:
      "SELECT\r\n
          {[versions].[versions].[baseplan]} DIMENSION PROPERTIES MEMBER_NAME ON 0,\r\n
          {TM1FILTERBYLEVEL({TM1SUBSETALL([groups].[groups])},0)} *
-         {TM1FILTERBYLEVEL({TM1SUBSETALL([periods].[periods])},0)} *
-         {TM1FILTERBYLEVEL({TM1SUBSETALL([employees].[employees])},0)} *
-         {TM1FILTERBYLEVEL({TM1SUBSETALL([lineitemscostandftebygroups].[lineitemscostandftebygroups])},0)}
-         *
          {TM1FILTERBYLEVEL({TM1SUBSETALL([measurescostandftebygroups].[measurescostandftebygroups])},0)}
          DIMENSION PROPERTIES MEMBER_NAME ON 1\r\n
          FROM [costandftebygroups]"
